# myface-id

./: .gitignore  README.md  settings.gradle
OBFaceID/: build.gradle
OBFaceID/src/androidTest/java/com/orbbec/financeapp/: ExampleInstrumentedTest.java
OBFaceID/src/main/: AndroidManifest.xml
OBFaceID/src/main/java/com/orbbec/adapter/: OnItemClickListener.java  UserListAdapter.java
OBFaceID/src/main/java/com/orbbec/app/: ExApplication.java
OBFaceID/src/main/java/com/orbbec/base/: BaseApplication.java
OBFaceID/src/main/java/com/orbbec/keyguard/: BaseActivity.java  FaceRegistActivity.java  NoCameraActivity.java  ObFacePresenter.java  RecognitionFaceActivity.java  RegistFromCamAcitvity.java  RegistFromPicActivity.java  SettingsActivity.java
OBFaceID/src/main/java/com/orbbec/utils/: AppDef.java  BitmapUtil.java  DateTimeUtil.java  DrawUtil.java  GlideImageLoader.java  GlideUtil.java  OnGetCurrentDateTimeListener.java  SerialPortHelper.java  TimeThreadUtil.java  TrackDrawUtil.java  UserDataUtil.java
OBFaceID/src/main/res/drawable/: selector_edit.xml
OBFaceID/src/main/res/layout/: activity_face_regist.xml  activity_recognition_face.xml  activity_regist_from_cam_acitvity.xml  activity_regist_from_pic.xml  activity_settings.xml  camera_view.xml  item_user_list.xml
OBFaceID/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
OBFaceID/src/main/res/values-sw600dp/: dimens.xml
OBFaceID/src/main/res/values-sw800dp/: dimens.xml
OBFaceID/src/test/java/com/orbbec/financeapp/: ExampleUnitTest.java
app/src/main/java/com/orbbec/keyguard/: RegisterFaceNickAct.java
coreLibrary/: .gitignore  CMakeLists.txt  build.gradle
coreLibrary/src/androidTest/java/com/orbbec/keyguard/: ExampleInstrumentedTest.java
coreLibrary/src/main/: AndroidManifest.xml
coreLibrary/src/main/assets/openni/: orbbec.ini
coreLibrary/src/main/cpp/: OrbbecUtils.cpp  utils.h
coreLibrary/src/main/cpp/Include/: OniCProperties.h  OniProperties.h  OrbbecVersion.h  head_surface.h
coreLibrary/src/main/cpp/opengles/: CameraOpenGLES.h  esUtil.h  matrix.h
coreLibrary/src/main/java/com/orbbec/NativeNI/: CmOpenGLES.java  OrbbecUtils.java
coreLibrary/src/main/java/com/orbbec/base/: DetectionCallback.java  DeviceCallback.java  FacePresenter.java  IdentifyCallback.java  ObSource.java  OrbbecPresenter.java  RegisterCallback.java
coreLibrary/src/main/java/com/orbbec/constant/: Constant.java
coreLibrary/src/main/java/com/orbbec/keyguard/: BaseFacePresenter.java  CameraControl.java  NoUsbDeviceDlg.java  ObDataSource.java  RgbCamera.java  UsbStateReceiver.java
coreLibrary/src/main/java/com/orbbec/model/: User.java
coreLibrary/src/main/java/com/orbbec/utils/: CountDownAnimation.java  DataSource.java  FpsMeter.java  GlobalDef.java  LogUtil.java  MySQLiteHelper.java  MySqLiteHelper.java  OpenNiHelper.java  TrackUtil.java  Util.java  XmyLog.java
coreLibrary/src/main/java/com/orbbec/view/: CmGlRenderer.java  DetectRectView.java  GlFrameSurface.java  OpenGlView.java  UvcSurfaceView.java
coreLibrary/src/main/res/layout/: dlg_nousb_message.xml
coreLibrary/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
coreLibrary/src/main/res/values-sw600dp/: dimens.xml
coreLibrary/src/test/java/com/orbbec/keyguard/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary/: build.gradle
openCVLibrary/src/main/java/org/opencv/android/: BaseLoaderCallback.java
